--- a/text/s2-c00-using-git.textile
+++ b/text/s2-c00-using-git.textile
@@ -1,4 +1,4 @@
-h1. Section 2 - Using Git
+h1. Section Two - Using Git
 
 Now that you understand what Git does at a fundamental level - how it tracks and stores content, how it stores branches and merges and tracks remote copies of the repository, let's see how to actually use it.  This next section presents some of the basic commands that you will need to know in order to use git effectively.  
 
