--- a/text/s6-c02-packfiles.textile
+++ b/text/s6-c02-packfiles.textile
@@ -4,5 +4,7 @@ h3. What is a packfile and when are they created?
 
 h3. Packfile format
 
+index - 3 (4?) versions
+
 h3. How does Git actually create a packfile?
 
